<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Marcador Electrònic</string>
	<string name="title_handball">Balonmano</string>
	<string name="title_beachvoley">Voleibol Platja</string>
	<string name="title_tenis">Tenis</string>
	<string name="title_soccer">Futbol</string>
	<string name="title_futsal">Futbol Sala</string>
	<string name="title_basquet">Bàsquet</string>
	
    <string name="but_new">Començar partit</string>
    <string name="but_preferences">Configuració</string>
    <string name="but_exit">Sortir</string>
    <string name="but_startOff">Començar</string>
    <string name="but_startOn">Pausar</string>
    <string name="time_match">Temps</string>
    <string name="visitor">VISITANT</string>
    <string name="local">LOCAL</string>
    <string name="period">PERIODE</string>
    <string name="next_time">Si vols començar la propera part fes clic en el número del periode</string>
    <string name="end_period">Fi del periode</string>
    <string name="end_game">Final del partit, si premeu la tecla menú podeu enviar(sms/email) o començar un nou partit.</string>
    <string name="ok">Acceptar</string>
    <string name="ko">Cancelar</string>
    <string name="result_period">Resultats dels periodes</string>
    <string name="txt_tiebreak">Vols jugar el tiebreak?</string>
    <string name="txt_periodvoley">Per fer canvi de set, fes clic en el número del periode</string>
    <string name="faltes">Faltes:</string>
        
    <string name="new_game">Nou</string>
    <string name="save_game">Guardar</string>
    <string name="send_game">Enviar</string>
    
    <string name="subject_mail">Resultat del partit</string>    
    <string name="select_sport">Seleccionar un esport</string>    
    <string-array name="esports">
		<item>Balonmano</item>
		<item>Voleibol</item>
		<item>Tenis</item>
		<item>Futbol</item>
		<item>Futbol Sala</item>
		<item>Bàsquet</item>
	</string-array>    
	
	<string name="info">Ajuda</string>
	<string name="send_mail">Enviar consulta</string>
	<string name="send_question">Enviar dubtes, errors o suggeriments</string>
	<string name="more_info">Més informació</string>
	<string name="url">Visita http://ferran.ribell.com</string>
	<string name="subject_info_mail">ScoreBoardDroid info</string>
	<string name="idiomes">Idioma</string>
	<string name="txt_idiomes">Idioma de l\'aplicació</string>
	<string-array name="idiomes_values">
		<item>ca</item>
		<item>es</item>
		<item>en</item>
	</string-array>
    <string-array name="idiomes">
		<item>Català</item>
		<item>Español</item>
		<item>English</item>
	</string-array>
	<string name="extras"></string>
	<string name="developer">Desenvolupador</string>
	<string name="txt_developer">Ferran Ribell Bachs</string>
	<string name="thanks">Agraïments</string>
	<string name="thanks_to">Josep Mª Nogueras</string>
</resources>