<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:gravity="center_horizontal">

	<LinearLayout
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:orientation="horizontal">  
		<Chronometer
		 	android:text="@+id/Chronometer01"
		 	android:id="@+id/crono"
		 	android:layout_width="wrap_content"
		 	android:layout_height="wrap_content"
		 	android:layout_weight="0"
      android:paddingBottom="30dip"
      android:paddingTop="30dip"
      android:textStyle="bold" 
      android:textSize="40sp"/>
	
		<ToggleButton 
			android:textOn="@string/but_startOn"
			android:textOff="@string/but_startOff"
			android:id="@+id/but_start" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:onClick="startStopMatch"/>
	</LinearLayout>
	
	<LinearLayout
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:orientation="horizontal">  
	
		<LinearLayout
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:orientation="vertical">
		  
		  	<TextView
		  	android:text="@string/visitor"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	/>
		  	<TextView
		  	android:text="0"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	/>
	   		<ImageButton 
	   			android:id="@+id/ImageButton01"
	   			android:layout_width="wrap_content" 
	   			android:layout_height="wrap_content">
	   		</ImageButton>

</LinearLayout>  
		
		<LinearLayout
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:orientation="vertical">
		  
		  	<TextView
		  	android:text="@string/local"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	/>
		  	<TextView
		  	android:text="0"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	/>
			<ImageButton 
				android:id="@+id/ImageButton02" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"></ImageButton>
	   </LinearLayout>	
	
	
</LinearLayout>

</LinearLayout>
