<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:myapp="http://schemas.android.com/apk/res/frb.scoreboarddroid"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background">
     
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dip"
    android:layout_marginRight="20dip">
	    <ImageView
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:src="@drawable/scoreboard"
	    	android:layout_gravity="center"
	    />
	    <TextView
	    	android:text="ScoreBoardDroid"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:textStyle="bold"
	    	android:typeface="sans"
	    	android:textSize="24sp"
	    	android:textColor="#6600ff00"	    	   	
	    	android:layout_gravity="center"
	    />
	</LinearLayout>
	
    <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
	android:padding="20dip">
		<Button 
			android:text="@string/but_new" 
			android:id="@+id/but_new" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"		
			android:onClick="startMatch"/>
		<Button 
			android:text="@string/but_preferences" 
			android:id="@+id/but_preferences" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:onClick="openPreferences"/>
		<Button 
			android:text="@string/but_exit" 
			android:id="@+id/but_exit" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:onClick="exit"/>
	</LinearLayout>
	
    <RelativeLayout
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:layout_alignParentBottom="true"
       android:gravity="bottom">
       
		<ImageView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="bottom"
	    android:src="@drawable/fons_down"/>
		<com.admob.android.ads.AdView   
			android:id="@+id/ad"  
			android:layout_width="fill_parent"  
			android:layout_height="wrap_content" 
			android:visibility="visible"		
			android:layout_gravity="bottom"
			android:layout_alignParentBottom="true"
			myapp:backgroundColor="#000000" 
			myapp:primaryTextColor="#FFFFFF"
			myapp:secondaryTextColor="#CCCCCC"
			myapp:keywords="Android game"/>
	</RelativeLayout>   
    
    
</LinearLayout>