<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/vista_mare"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:gravity="center_horizontal">	
	
	<RelativeLayout
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:orientation="horizontal"
	  android:padding="10dip">  
	
		<LinearLayout
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:orientation="vertical"
		  android:layout_alignParentLeft="true"
		  android:gravity="center">
		  
		  	<TextView
		  	android:text="@string/local"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	android:background="@drawable/border"/>
		  	<ImageButton 
				android:id="@+id/but_addLocal" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:background="@drawable/add"/>
		  	<TextView
		  	android:id="@+id/point_local"
		  	android:text="0"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	android:background="@drawable/border1"
		  	android:padding="20dip"
		  	android:textSize="20sp"
		  	/>
	   		<ImageButton 
	   			android:id="@+id/but_removeLocal"
	   			android:layout_width="wrap_content" 
	   			android:layout_height="wrap_content"
	   			android:background="@drawable/remove"/>

		</LinearLayout>  
		
		<LinearLayout
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:orientation="vertical"
		  android:layout_centerInParent="true"
		  android:gravity="center">
		  <TextView
		  	android:text="@string/period"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	android:background="@drawable/border"
		  	/>
		  <TextView
		  	android:id="@+id/txt_period"
		  	android:text="1"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	android:textColor="#933535"
		  	android:background="@drawable/border1"
		  	android:layout_margin="15dip"
		  	android:padding="20dip"
		  	android:textSize="25sp"/>
		  	
		  		  	<LinearLayout
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:orientation="horizontal"
			  android:layout_centerInParent="true"
			  android:gravity="center">
			
				<TextView
			  	android:id="@+id/set_local"
			  	android:text="0"
			  	android:layout_width="wrap_content"
			  	android:layout_height="wrap_content"
			  	android:textColor="#EEEEEE"
			  	android:background="@drawable/border1"
			  	android:padding="5dip"
			  	android:textSize="15sp"/>
			  	<TextView
			  	android:id="@+id/set_visitor"
			  	android:text="0"
			  	android:layout_width="wrap_content"
			  	android:layout_height="wrap_content"
			  	android:textColor="#EEEEEE"
			  	android:background="@drawable/border1"
			  	android:padding="5dip"
			  	android:textSize="15sp"/>
		  	  
			</LinearLayout>
	
		</LinearLayout>
		  
		<LinearLayout
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:orientation="vertical"
		  android:layout_alignParentRight="true"
		  android:gravity="center">
		  
		  	<TextView
		  	android:text="@string/visitor"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	android:background="@drawable/border"
		  	/>
		  	<ImageButton 
				android:id="@+id/but_addVisitor" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:background="@drawable/add"/>
		  	<TextView
		  	android:id="@+id/point_visitor"
		  	android:text="0"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	android:background="@drawable/border1"
		  	android:padding="20dip"
		  	android:textSize="20sp"/>
			
			<ImageButton 
				android:id="@+id/but_removeVisitor" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:background="@drawable/remove"/>
	   </LinearLayout>	
	
	
	</RelativeLayout>
	
	<LinearLayout
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:paddingTop="10dip"
	  android:orientation="horizontal">  
		<Chronometer
		 	android:text="@+id/Chronometer01"
		 	android:id="@+id/crono"
		 	android:layout_width="160dip"
		 	android:layout_height="wrap_content"
		 	android:layout_weight="0"      
      		android:textStyle="bold"
      		android:textColor="#de9700" 
      		android:textSize="40sp"
      		android:layout_gravity="left"
      		android:background="@drawable/border1"/>
	
		<ImageButton 
			android:id="@+id/but_start" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:onClick="startStopMatch"
			android:layout_marginLeft="15dip"
			android:width="100dip"
			android:layout_gravity="center_vertical"
			android:background="@drawable/play"/>
	
	
		<LinearLayout
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:orientation="horizontal"
		  android:layout_marginLeft="15dip"
		  android:layout_gravity="center_vertical"
		  android:layout_marginRight="5dip">
		  			
			<LinearLayout
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:orientation="vertical">
				<TextView
				  	android:text="LOC:"
				  	android:layout_width="wrap_content"
				  	android:layout_height="wrap_content"
				  	android:padding="2dip"
				  	android:textStyle="bold"
				  	android:layout_gravity="center_vertical"/>
				<TextView
				  	android:text="VIS:"
				  	android:layout_width="wrap_content"
				  	android:layout_height="wrap_content"
				  	android:textStyle="bold"
				  	android:padding="2dip"
				  	android:layout_gravity="center_vertical"/>		  	
				<TextView
				  	android:text="TIME:"
				  	android:layout_width="wrap_content"
				  	android:layout_height="wrap_content"
				  	android:textStyle="bold"
				  	android:padding="2dip"
				  	android:layout_gravity="center_vertical"/>
			</LinearLayout>
			
			<LinearLayout
			  android:id="@+id/resultados"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:orientation="horizontal"/>			  			
			
		</LinearLayout>
	</LinearLayout>

</LinearLayout>
